[package]
name = "rossip"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
socket2 = "0.5"
mdns = "1.0"  # optional, or use `async-mdns`
clap = "4"    # optional, CLI arg parsing
chrono = "0.4"  # timestamps and timeouts
