[package]
name = "pung"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2.0.1", features = ["derive"] }
dashmap = "6.1.0"
uuid = { version = "1", features = ["v4"] }
socket2 = "0.5"
clap = "4"    # optional, CLI arg parsing
chrono = "0.4"  # timestamps and timeouts
nanoid = "0.4.0"
get_if_addrs = "0.5.3"
rand = "0.9.1"
cargo-watch = "8.5.3"
log = "0.4.27"
hex = "0.4.3"
rustyline = "15.0.0"
unicode-width = "0.2.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde_json = "1.0"
